Update Dark Mode

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,24 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=America/Sao_Paulo
+
+APP_TITLE="BlockCity - NFT Play to Earn Game"
+APP_KEYWORDS="BlockCity, block city, nft game, play to earn, nft, cryptocurrency, binance smart chain, bsc"
+APP_DESCRIPTION="BlockCity is an NFT Play to Earn game live on the Binance Smart Chain (BSC) where you will have to build your own city"
+
+PRESALE=false
+IS_TESTNET=true
+CONTRACT_SYMBOL="BCT"
+CONTRACT_ADDRESS="0x01Bf61d9693f6bB8B0F0fe02aBec41f9AE95bf3c"
+WALLET_PAGOS="0x75caa06f0aa231a5fe70f0a241bdd057c3549f60"
+MIN_CLAIM=30
+MAX_BUILD_LEVEL=3
+WITHDRAW=false
+MIN_WITHDRAW=10
+MAX_WITHDRAW=5000
+MINT_COST=100
+API_WEB3_URL="http://localhost:3000"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
