--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -21,4 +21,4 @@ jobs:
             cd /var/www/blockcity
 
             git status
-            git pull https://fmedeiros95:${{ secrets.TOKEN }}@github.com/fmedeiros95/blockcity.git main
+            git pull https://fmedeiros95:${{ secrets.TOKEN }}@github.com/fmedeiros95/blockcity.git master
