--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# variaveis uteis para o JS
+TESTNET_WEB3X="https://data-seed-prebsc-1-s1.binance.org:8545/"
+TESTNET_CHAIN_ID="0x61"
+TESTNET_BSCSCAN="https://testnet.bscscan.com"
+TESTNET_CHAIN_NAME="BSC - Testnet"
+
+MAINNET_WEB3X="https://bsc-dataseed.binance.org/"
+MAINNET_CHAIN_ID="0x38"
+MAINNET_BSCSCAN="https://bscscan.com"
+MAINNET_CHAIN_NAME="BSC - Mainnet"
