--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,8 @@ WALLET_PAGOS="0x75caa06f0aa231a5fe70f0a241bdd057c3549f60"
 MIN_CLAIM=30
 MAX_BUILD_LEVEL=3
 WITHDRAW=false
-MIN_WITHDRAW=10
-MAX_WITHDRAW=5000
+MIN_WITHDRAWAL=10
+MAX_WITHDRAWAL=5000
 MINT_COST=100
 API_WEB3_URL="http://localhost:3000"
 
