--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,9 @@
-APP_NAME=BlockCity
+APP_NAME="Laravel"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=America/Sao_Paulo
-
-APP_TITLE="BlockCity - NFT Play to Earn Game"
-APP_KEYWORDS="BlockCity, block city, nft game, play to earn, nft, cryptocurrency, binance smart chain, bsc"
-APP_DESCRIPTION="BlockCity is an NFT Play to Earn game live on the Binance Smart Chain (BSC) where you will have to build your own city"
-
-PRESALE=false
-IS_TESTNET=true
-CONTRACT_SYMBOL="BCT"
-CONTRACT_ADDRESS="0x01Bf61d9693f6bB8B0F0fe02aBec41f9AE95bf3c"
-WALLET_PAGOS="0x75caa06f0aa231a5fe70f0a241bdd057c3549f60"
-MIN_CLAIM=30
-MAX_BUILD_LEVEL=3
-WITHDRAW=false
-MIN_WITHDRAWAL=10
-MAX_WITHDRAWAL=5000
-MINT_COST=100
-API_WEB3_URL="http://localhost:3000"
+APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -29,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=blockcity
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -69,13 +52,44 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# variaveis uteis para o JS
+# App Game
+APP_TITLE="${APP_NAME} - NFT Play to Earn Game"
+APP_KEYWORDS="${APP_NAME}, nft game, play to earn, nft, cryptocurrency, binance smart chain, bsc"
+APP_DESCRIPTION="${APP_NAME} is an NFT Play to Earn game live on the Binance Smart Chain (BSC) where you will have to build your own city"
+
+# Game Config
+IS_TESTNET=true
+PRESALE=false
+
+# Building Config
+MINT_COST=1
+MIN_CLAIM=10
+MAX_BUILD_LEVEL=5
+
+# Withdrawal Config
+WITHDRAWAL=false
+MIN_WITHDRAWAL=1
+MAX_WITHDRAWAL=10000
+
+# Blockchain Api
+API_WEB3_URL="https://api.allstarsgame.com.br"
+
+# Testnet Config
 TESTNET_WEB3X="https://data-seed-prebsc-1-s1.binance.org:8545/"
 TESTNET_CHAIN_ID="0x61"
 TESTNET_BSCSCAN="https://testnet.bscscan.com"
 TESTNET_CHAIN_NAME="BSC - Testnet"
+TESTNET_CONTRACT_SYMBOL="LAR"
+TESTNET_CONTRACT_DECIMALS=8
+TESTNET_CONTRACT_ADDRESS="0x0000000000000000000000000000000000000000"
+TESTNET_WALLET_PAGOS="0x0000000000000000000000000000000000000000"
 
+# Mainnet Config
 MAINNET_WEB3X="https://bsc-dataseed.binance.org/"
 MAINNET_CHAIN_ID="0x38"
 MAINNET_BSCSCAN="https://bscscan.com"
 MAINNET_CHAIN_NAME="BSC - Mainnet"
+MAINNET_CONTRACT_SYMBOL="LAR"
+MAINNET_CONTRACT_DECIMALS=8
+MAINNET_CONTRACT_ADDRESS="0x0000000000000000000000000000000000000000"
+MAINNET_WALLET_PAGOS="0x0000000000000000000000000000000000000000"
