--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,6 @@ jobs:
 
             git status
             git pull https://fmedeiros95:${{ secrets.TOKEN }}@github.com/fmedeiros95/metacity.git master
+
+            npm install
+            npm run production
